('GSM' is Greg Sabino Mullane, greg@turnstep.com)

1.50
	- Use prepare_cached in last_insert_id function. (CPAN bug #24313)
	- Switch from cvs to subversion. Switch from gborg to perl.org.
	- Fix pg_description join in table_info(). [Max Cohan max@endpoint.com]
	- Fix memory leak in bytea quoting. (CPAN bug #21392). Fix memory leak 
		in pg_notifies. [Stephen Marshall smarshall@wsi.com]
	- Added statistics_info function [Brandon Black blblack@gmail.com]

1.49 May 7, 2006
	- Thanks to Backcountry.com for sponsoring work on this release. [GSM]
	- Add the statement handle attribute ParamTypes, and fix an error 
		in ParamValues. ParamTypes requires DBI 1.49 or better. [GSM]
	- Strip the final newline from error messages, so that die can add 
		in the line number. (CPAN bug #18900) [GSM]
	- Make workaround for PQresultErrorField not returning proper 
		result when an error is set and we are connecting via TCP/IP.
		This allows correct $dbh->state() values. [GSM]
	- Fix incorrect quoting preventing compiling. (CPAN bug #18640)
	- Add support for quoting and binding of geometric types: POINT, 
		LINE, LSEG, BOX, PATH, POLYGON, and CIRCLE. Also added the 
		TID type. [GSM]

1.48 April 5, 2006
	- Bump minimum DBI version to 1.45 (CPAN bug #18260) (plus problems 
		in versions 1.42 and 1.44) [GSM]
	- Fix typo in Pg.pm code (CPAN bug #18537) [marc@sssonline.com]
	- Ensure begin_work is properly set before err. (CPAN bug #18387) [GSM]
	- Force PQexecParams to only run with DML. (CPAN bug #18258) [GSM]
	- Fix bytea encoding problem (CPAN bug #18264) [GSM]
	- Add documentation about connection service files (pg_service.conf). 
		[David Fetter]

1.47 March 20, 2006
	- Fix problem with selecting arrays. (CPAN bugs #18128 and 
		#18177) [GSM]
	- Fix problem with dollar-sign placeholders. [GSM]

1.46 March 16, 2006
	- Fix problem with dollar-sign placeholders. (husseinp@gmail.com)
		(CPAN bug #18209) [GSM]

1.45 February 27, 2006