@@ -63,6 +63,7 @@ d pg_pid
 d pg_prepare_now - tested in 03smethod.t
 d pg_server_prepare - tested in 03smethod.t
 d pg_prepare_now - tested in 03smethod.t
+d pg_placeholder_dollaronly - tested in 12placeholders.t
 
 s NUM_OF_FIELDS, NUM_OF_PARAMS
 s NAME, NAME_lc, NAME_uc, NAME_hash, NAME_lc_hash, NAME_uc_hash
