@@ -1,6 +1,9 @@
 ('GSM' is Greg Sabino Mullane, greg@turnstep.com)
 
 1.50
+	- Add $dbh->{pg_placeholder_dollaronly} to allow '?' and other symbols 
+	  to be used in prepared statements without getting interpreted as 
+	  placeholders, i.e. the geometric operator '?#' (CPAN bug #24124) [GSM]
 	- Use prepare_cached in last_insert_id function. (CPAN bug #24313)
 	- Switch from cvs to subversion. Switch from gborg to perl.org.
 	- Fix pg_description join in table_info(). [Max Cohan max@endpoint.com]
